@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<scraper framework="1.1" date="2011-06-16">
+<scraper framework="1.1" date="2011-06-20">
 	<NfoUrl dest="3">
-		<RegExp input="$$1" output="&lt;url&gt;http://akas.\1/title/tt\2/&lt;/url&gt;&lt;id&gt;tt\2&lt;/id&gt;" dest="3">
-			<expression clear="yes" noclean="1">(imdb....?)/Title\?([0-9]*)</expression>
+		<RegExp input="$$1" output="&lt;url&gt;http://akas.imdb.com/title/tt\1/&lt;/url&gt;&lt;id&gt;tt\1&lt;/id&gt;" dest="3">
+			<expression clear="yes" noclean="1">imdb....?/Title\?([0-9]*)</expression>
 		</RegExp>
-		<RegExp input="$$1" output="&lt;url&gt;http://akas.\1\2/&lt;/url&gt;&lt;id&gt;tt\2&lt;/id&gt;" dest="3+">
-			<expression noclean="1">(imdb....?/title/tt)([0-9]*)</expression>
+		<RegExp input="$$1" output="&lt;url&gt;http://akas.imdb.com/title/tt\1/&lt;/url&gt;&lt;id&gt;tt\1&lt;/id&gt;" dest="3+">
+			<expression noclean="1">imdb....?/title/tt([0-9]*)</expression>
 		</RegExp>
 	</NfoUrl>
 	<CreateSearchUrl dest="3" SearchStringEncoding="iso-8859-1">
