@@ -1,3 +1,6 @@
+[B]1.3.5[/B]
+- Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.2) i.e. "fixed: make sure imdb ID picked up correctly from international sites"
+
 [B]1.3.4[/B]
 - Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.1) i.e. "fixed: wrong imdb ID detection other certain circumtances"
 
